Add remove function

--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
+  },
+  "dependencies": {
+    "classlist": "^2.0.0"
   }
 }
